@@ -62,6 +62,9 @@ sub compile {
     $self->{continue} = delete $param->{continue} ||
                         delete $param->{c}        || 
                         0;
+    $self->{ignorecase} = delete $param->{ignorecase} ||
+                        delete $param->{i}        || 
+                        0;
     delete $param->{s};
 
     warn "Error in rule: unknown parameter '$_'" 
@@ -164,7 +167,13 @@ sub match {
             ? $flags->{c} 
             : defined $flags->{continue} 
             ? $flags->{continue} 
-            : $rule->{c};
+            : $rule->{continue};
+
+    my $ignorecase = defined $flags->{i} 
+            ? $flags->{i} 
+            : defined $flags->{ignorecase} 
+            ? $flags->{ignorecase} 
+            : $rule->{ignorecase};
 
         #print "flag p";
         #print "match: grammar $rule->{grammar}, $str, %$flags\n";
@@ -182,6 +191,7 @@ sub match {
         %args = %{$flags->{args}} if defined $flags && defined $flags->{args};
         $args{p} = $p;
         $args{continue} = $continue;
+        $args{ignorecase} = $ignorecase;
         
         #print "calling code with ",Dumper([ $grammar,$str, $state,\%args ] );
         my $match = $rule->{code}( 
@@ -233,6 +243,7 @@ sub perl5 {
         "  ratchet "  .  "=> q(" . _str( $self->{ratchet} )  . "),\n" . 
         "  p "        .  "=> " . _str( $self->{p} )        . ",\n" . 
         "  sigspace " .  "=> q(" . _str( $self->{sigspace} ) . "),\n" . 
+        "  ignorecase ". "=> q(" . _str( $self->{ignorecase} )."),\n" . 
         "  code "     .  "=> "   . $self->{perl5}    . ",\n" . 
         "  perl5 "    .  "=> q(" . _quot( $self->{perl5} )  . "), }, " . 
         "q(" . ref($self) . ")";
