@@ -1,3 +1,4 @@
+- added external 'ignorecase' flag in regex
 - implemented hex/octal/named constants - \x, \o, \c, \X, \O, \C
 - added Unicode properties, such as <isL> <!isL> <+isL> <-isL> 
 - added StrPos class (Pugs::Runtime::StrPos)
